@@ -1,5 +1,8 @@
 Changes with APR-util 0.9.2
 
+  *) Queue overwrite, we now return the item pushed, not a reference to it. 
+     [Paul Marquis <PMarquis@pobox.com, Jacob Lewallen <jlwalle@cs.ucr.edu>]
+
   *) Remove include/apr_ldap.h on distclean.  PR 15592.  [Justin Erenkrantz]
 
   *) Fix race conditions in apr_queue.
